--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "homepage": "https://devmentor-pl.github.com/react-gh-pages",
-  "name": "react-gh-pages",
-  "version": "1.1.0",
+  "homepage": "https://devmentor-pl.github.com/react-gh-actions",
+  "name": "react-gh-actions",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
